# scute

./: .gitignore  .mcp.json  .scute.yml  LICENSE  README.md  dist-workspace.toml
.claude/: CLAUDE.md
.claude/skills/acceptance-criteria/: SKILL.md
.claude/skills/approval-tests/: SKILL.md  rust.md
.claude/skills/atdd/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/feature-development/: SKILL.md
.claude/skills/feature-development/references/: production-checklist.md
.claude/skills/harden/: SKILL.md
.claude/skills/issue-workflow/: SKILL.md
.claude/skills/refactoring/: SKILL.md
.claude/skills/scout-codebase/: SKILL.md
.claude/skills/sketch-slices/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/skills/verify-criteria/: SKILL.md
.claude/skills/writing-style/: SKILL.md
.github/workflows/: ci-scute.yml  ci-website.yml  pr-title-scute.yml  release-plz-scute.yml  release-scute.yml  release.yml  scheduled-dependency-freshness.yml
crates/: Cargo.toml  dist-workspace.toml  release-plz.toml
crates/scute-cli/: CHANGELOG.md  Cargo.toml
crates/scute-cli/src/: main.rs  output.rs
crates/scute-cli/tests/: acceptance.rs  cli.rs  commit_message.rs  dependency_freshness.rs  mcp.rs
crates/scute-config/: CHANGELOG.md  Cargo.toml
crates/scute-config/src/: lib.rs
crates/scute-core/: CHANGELOG.md  Cargo.toml
crates/scute-core/src/: commit_message.rs  dependency_freshness.rs  files.rs  lib.rs  output.rs  parser.rs  report.rs
crates/scute-core/src/code_complexity/: check.rs  mod.rs  rules.rs  rust.rs  score.rs  tests.rs  typescript.rs
crates/scute-core/src/code_similarity/: check.rs  detect.rs  language.rs  mod.rs  tokenize.rs
crates/scute-core/src/cognitive_complexity/: check.rs  score.rs
crates/scute-core/src/dependency_freshness/: cargo_metadata.rs  crates_io.rs  mod.rs  npm.rs
crates/scute-core/src/dependency_freshness/cargo/: crates_io.rs  metadata.rs  mod.rs
crates/scute-core/src/dependency_freshness/npm/: mod.rs
crates/scute-core/src/dependency_freshness/pnpm/: mod.rs
crates/scute-core/tests/: code_similarity.rs  dependency_freshness.rs
crates/scute-core/tests/code_similarity/: clone_detection.rs  end_to_end.rs  helpers.rs  tokenizer.rs
crates/scute-core/tests/code_similarity/snapshots/: code_similarity__clone_detection__partial_overlap_reports_both_groups.snap  code_similarity__end_to_end__detects_duplication_across_rust_files.snap  code_similarity__end_to_end__detects_duplication_across_typescript_files.snap  code_similarity__end_to_end__mixed_languages_detect_within_same_language.snap  code_similarity__end_to_end__multi_file_project_with_mixed_duplication.snap  code_similarity__tokenizer__input_a.snap  code_similarity__tokenizer__input_b.snap  code_similarity__tokenizer__normalizes_rust_function.snap  code_similarity__tokenizer__normalizes_typescript_with_literals_and_strips_comments.snap  code_similarity__tokenizer__preserves_macro_invocations.snap  code_similarity__tokenizer__strips_rust_attributes.snap  code_similarity__tokenizer__strips_rust_doc_comments.snap  code_similarity__tokenizer__strips_typescript_decorators.snap
crates/scute-core/tests/dependency_freshness/: cargo.rs  npm.rs  package_managers.rs  pnpm.rs
crates/scute-mcp/: CHANGELOG.md  Cargo.toml
crates/scute-mcp/src/: lib.rs  main.rs  schema.rs
crates/scute-mcp/tests/: server.rs
crates/scute-test-utils/: CHANGELOG.md  Cargo.toml
crates/scute-test-utils/src/: cli.rs  lib.rs  mcp.rs  project.rs
docs/checks/: code-complexity.md  code-similarity.md  commit-message.md  dependency-freshness.md
handbook/: README.md  attributes.md  development.md  pain-points.md  roadmap.md  vision.md
handbook/decisions/: 0001-check-evaluation-schema.md  0001-check-result-schema.md  0002-check-definition-format.md  0003-implementation-language.md  0004-check-implementation-architecture.md  0005-cli-output-contract.md  0006-atomic-checks-and-check-report.md  0006-atomic-checks-and-target-resolution.md
scripts/scute/: ci.sh  dist.sh  fmt.sh  lint.sh  release.sh  test.sh
scripts/website/: check.sh  deploy.sh
website/: deno.json  main.ts
