[package]
name = "scute"
version = "0.1.0"
edition = "2024"
description = "Deterministic fitness checks for your codebase"
repository = "https://github.com/scute-sh/scute"
homepage = "https://github.com/scute-sh/scute"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
scute-config = { path = "../scute-config" }
scute-core = { path = "../scute-core" }
scute-mcp = { path = "../scute-mcp" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
scute-test-utils = { path = "../scute-test-utils" }
serde_json = { workspace = true }
test-case = { workspace = true }
