[package]
name = "scute"
version = "0.0.7"
edition = "2024"
description = "Deterministic fitness checks for your codebase"
repository = "https://github.com/scute-sh/scute"
homepage = "https://github.com/scute-sh/scute"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
scute-config = { path = "../scute-config", version = "0.0.7" }
scute-core = { path = "../scute-core", version = "0.0.7" }
scute-mcp = { path = "../scute-mcp", version = "0.0.7" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
scute-test-utils = { path = "../scute-test-utils" }
serde_json = { workspace = true }
test-case = { workspace = true }
