[package]
name = "scute-config"
version = "0.0.7"
edition = "2024"
description = "Configuration loading for Scute"
repository = "https://github.com/scute-sh/scute"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
scute-core = { path = "../scute-core", version = "0.0.7" }
serde = { workspace = true }
serde_yml = "0.0.12"
dirs = "6"

[dev-dependencies]
tempfile = "3"
