[package]
name = "scute-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ignore = "0.4.25"
libsais = "0.2"
minreq = { version = "2", features = ["https"] }
semver = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"

[dev-dependencies]
googletest = { workspace = true }
test-case = { workspace = true }
insta = "1"
scute-test-utils = { path = "../scute-test-utils" }
tempfile = "3"
