[package]
name = "scute-core"
version = "0.0.8"
edition = "2024"
description = "Core check engine for Scute fitness checks"
repository = "https://github.com/scute-sh/scute"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
glob = "0.3"
ignore = "0.4.25"
libsais = { version = "0.2", default-features = false }
minreq = { version = "2", features = ["https"] }
semver = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = "0.26"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"

[dev-dependencies]
googletest = { workspace = true }
test-case = { workspace = true }
insta = "1"
scute-test-utils = { path = "../scute-test-utils" }
tempfile = "3"
