[package]
name = "scute-mcp"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "scute-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { workspace = true, features = ["server", "transport-io"] }
scute-config = { path = "../scute-config" }
scute-core = { path = "../scute-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
scute-test-utils = { path = "../scute-test-utils" }
test-case = "3"
