[package]
name = "scute-mcp"
version = "0.0.2"
edition = "2024"
description = "MCP server for Scute fitness checks"
repository = "https://github.com/scute-sh/scute"
license = "Apache-2.0"

[lints]
workspace = true

[lib]
name = "scute_mcp"
path = "src/lib.rs"

[dependencies]
rmcp = { workspace = true, features = ["server", "transport-io"] }
scute-config = { path = "../scute-config", version = "0.0.2" }
scute-core = { path = "../scute-core", version = "0.0.2" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt"] }
