[package]
name = "scute-test-utils"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
assert_cmd = "2"
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
serde_json = { workspace = true }
tempfile = "3"
tokio = { version = "1", features = ["rt"] }
