[package]
name = "scute-test-utils"
version = "0.0.3"
edition = "2024"
description = "Test utilities for Scute"
repository = "https://github.com/scute-sh/scute"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
assert_cmd = "2"
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
serde_json = { workspace = true }
tempfile = "3"
tokio = { version = "1", features = ["rt"] }
